Refactor reward calculation for using lower level Pokemon against higher level Pokemon

--- a/pokegym/Untitled-1.ipynb
+++ b/pokegym/Untitled-1.ipynb
@@ -76,6 +76,147 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(1.6*56**.56)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "102\n",
+      "138\n",
+      "117\n",
+      "99\n",
+      "89\n",
+      "125\n",
+      "164\n",
+      "198\n",
+      "291\n",
+      "236\n",
+      "312\n",
+      "298\n",
+      "298\n",
+      "369\n",
+      "289\n",
+      "414\n",
+      "325\n",
+      "349\n",
+      "371\n",
+      "520\n",
+      "761\n",
+      "929\n",
+      "1203\n",
+      "1393\n",
+      "1222\n",
+      "1052\n",
+      "983\n",
+      "1414\n",
+      "1379\n",
+      "1102\n",
+      "1404\n",
+      "1365\n",
+      "1757\n",
+      "1617\n",
+      "1501\n",
+      "2043\n",
+      "2649\n",
+      "3813\n",
+      "4123\n",
+      "6160\n",
+      "6965\n",
+      "7317\n",
+      "7780\n",
+      "11440\n",
+      "9086\n",
+      "7925\n",
+      "7586\n",
+      "6268\n",
+      "8494\n",
+      "11590\n",
+      "12887\n",
+      "10036\n",
+      "13107\n",
+      "13276\n",
+      "18581\n",
+      "23300\n",
+      "32479\n",
+      "32517\n",
+      "30334\n",
+      "38207\n",
+      "57136\n",
+      "47147\n",
+      "42875\n",
+      "34532\n",
+      "42707\n",
+      "57170\n",
+      "51009\n",
+      "39855\n",
+      "43827\n",
+      "60948\n",
+      "52747\n",
+      "64483\n",
+      "56923\n",
+      "74544\n",
+      "94353\n",
+      "88500\n",
+      "73698\n",
+      "97845\n",
+      "118349\n",
+      "106778\n",
+      "123062\n",
+      "158118\n",
+      "145632\n",
+      "186666\n",
+      "244408\n",
+      "191506\n",
+      "279407\n",
+      "228193\n",
+      "260781\n",
+      "212220\n",
+      "283896\n",
+      "266155\n",
+      "278405\n",
+      "229649\n",
+      "189189\n",
+      "225030\n",
+      "313461\n",
+      "329834\n",
+      "280049\n"
+     ]
+    }
+   ],
+   "source": [
+    "def qua_random(x):\n",
+    "    import random\n",
+    "    return x + random.randint((x//4) * -1, x//2)\n",
+    "value = 100\n",
+    "for x in range(1 , 100):\n",
+    "    value = qua_random(value)\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -53353,7 +53494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
